--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -566,3 +566,8 @@ title = {PROBEN1 — A set of benchmarks and benchmarking rules for neural netwo
 	title        = {eaopt},
 	howpublished = {\url{https://github.com/MaxHalford/eaopt}}
 }
+
+@misc{backpropagation,
+	title        = {eaopt},
+	howpublished = {\url{https://en.wikipedia.org/wiki/Backpropagation}}
+}
