--- a/doc/secciones/06_implementacion.tex
+++ b/doc/secciones/06_implementacion.tex
@@ -8,7 +8,7 @@ This milestone contained the following user story:
 
 \subsubsection*{\href{https://github.com/salvacorts/TFG-Parasitic-Metaheuristics/issues/20}{Issue \#20}: As an Administrator, I want to run a demo problem so that I can test the platform} 
 
-Fist of all, we need a problem that can perform well in the platform. This problem will be used to test the platform as we develop it further.
+Fist of all, we needed a problem that can perform well in the platform. This problem will be used to test the platform as we develop it further.
 
 We chose a multilayer perceptron (MLP) trained with the \textit{Glass} and \textit{Cancer1a} datasets from \textit{proben1} benchmark \ref{proben1}; a set of benchmarks for neural network training algorithms.
 
@@ -18,7 +18,7 @@ The \textit{Glass} dataset is made of 214 samples of glass where each one contai
 
 There are two main reasons to have chosen a multilayer perceptron to develop and demo the platform. On the one hand, its fitness function takes more time than the average latency of communication between nodes in the platform. On the other hand, we have previous experience \ref{gprop} with this problem and we are familiar with some useful genetic operators we can apply.
 
-The genetic operators of the genetic algorithm we will use to optimize the neural network are the same ones proposed by P. A. Castillo et al in G-Prop \cite{gprop}:
+The genetic operators of the genetic algorithm we have used  to optimize the neural network are the same ones proposed by P. A. Castillo et al in G-Prop \cite{gprop}:
 
 \begin{itemize}
 	\item \textbf{Selection:} Roulette tournament where two chromosomes are randomly selected from the population to cross.
@@ -71,7 +71,7 @@ type Genome interface {
 Since the implementation of these models does not contemplate additional genetic operators apart from those defined in the \textit{Genome} interface from \textit{eaopt}, we had to add an additional member to the generational model class containing an array of extra genetic operators (Listing \ref{lst:ExtraOperator}) that are used after applying mutation and crossover over a given chromosome as seen in Listing \ref{lst:opapp}.
 
 \begin{lstlisting}[
-caption={Definition of an extra genetic operator as a struct with a float representing the probability op application, and a function that takes genome and returns a modified one.},
+caption={Definition of an extra genetic operator as a struct with a float representing the probability of application, and a function that takes genome and returns a modified one.},
 label={lst:ExtraOperator},
 captionpos=b]
 type ExtraOperator struct {
@@ -84,7 +84,6 @@ type ExtraOperator struct {
 caption={Application of extra operators after mutating.},
 label={lst:opapp},
 captionpos=b]
-// Apply mutation to the offsprings
 if mod.MutRate > 0 {
 	offsprings.Mutate(mod.MutRate, pop.RNG)
 }
@@ -100,8 +99,18 @@ for i := range offsprings {
 }
 \end{lstlisting} 
 
-As soon as the the genetic operators were implemented and tested, we proceeded to fully execute the genetic algorithm.
-In order to get some insights about the state of the population during the execution of the genetic algorithm, we logged the fitness and the number of neurons of the best chromosome, and the average fitness of the population after each generation. In Figure \ref{native}
+As soon as the the genetic operators were implemented and unit tested, we proceeded to fully execute the genetic algorithm.
+In order to get some insights about the state of the population during the execution of the genetic algorithm, we logged the fitness and the number of neurons of the best chromosome, and the average fitness of the population after each generation. In Figure \ref{native} we can see how the average and best fitness, as well as the number of neurons of the best solution evolves through the execution of the algorithm.
+
+\begin{lstlisting}[
+caption={Some execution logs.},
+label={lst:logs},
+captionpos=b]
+time="2019-07-18T17:51:50+02:00" level=info msg="Best fitness at generation 0: 34.285714" Avg=65.20000000000003 Fitness=34.28571428571429 Generation=0 HiddenLayer_Neurons=16 fields.level=info
+time="2019-07-18T17:51:51+02:00" level=info msg="Best fitness at generation 1: 34.285714" Avg=62.45714285714287 Fitness=34.28571428571429 Generation=1 HiddenLayer_Neurons=16 fields.level=info
+time="2019-07-18T17:51:52+02:00" level=info msg="Best fitness at generation 2: 31.428571" Avg=62.342857142857135 Fitness=31.42857142857143 Generation=2 HiddenLayer_Neurons=13 fields.level=info
+time="2019-07-18T17:51:53+02:00" level=info msg="Best fitness at generation 3: 25.714286" Avg=62.14285714285714 Fitness=25.714285714285708 Generation=3 HiddenLayer_Neurons=19 fields.level=info
+\end{lstlisting} 
 
 \begin{figure}[h!]
 		\centering
@@ -110,10 +119,77 @@ In order to get some insights about the state of the population during the execu
     	\label{fig:native}
 \end{figure} 
 
-We noticed that the execution of the algorithm was taking too long so we used a profiler in order to study which areas of the code were taking most time. It ended up being the \textit{Go perceptron} logs generator. we disabled these logs and the execution time was dramatically increased from more than 30 minutes to around 2 minutes.
+We noticed that the execution of the algorithm was taking too long so we used a profiler in order to study which areas of the code were taking most time. It ended up being the \textit{Go perceptron} logs generator. we disabled these logs and the execution time was dramatically reduced from more than 2 hours to around 2 minutes.
 
-Once we were happy about the results, we started to build a simple web interface as a proof of concept for the execution of the algorithm compiled into WebAssembly.
+Once we were happy about the results, we started to build a simple web interface as a proof of concept for the execution of the algorithm compiled into WebAssembly. We started with a very simple webpage that executed the compiled webassembly and displayed the logs in the console from the developers tools of the browser. But we had two problems with this approach:
 
+On the one hand, when the browser developers tools are open, WebAssembly is actually ran like a JavaScript in order to be able to debug it. So that, the execution time is considerably increased, losing the main advantage of and the reason of using WebAssembly.
 
-Talk about the results and time in Wasm
+As a solution, we added a HTML \textit{Div} to the webpage where we appended the logs from the program execution directly from go using a custom class (listing \ref{lst:weblogger1}) that implemented the \textit{io.Writer} interface. By doing so, we did not need the developer tools anymore, having direct visual feedback from the execution and good performance.
 
+\begin{lstlisting}[
+caption={Weblogger class used to append logs to the webpage.},
+label={lst:weblogger1},
+captionpos=b]
+// In main()
+log.SetOutput(WebLogger{})
+...
+
+type WebLogger struct{}
+
+func (cl WebLogger) Write(p []byte) (o int, err error) {
+	logs := dom.Doc.GetElementById("logs")
+
+	new := dom.Doc.CreateElement("p")
+	new.SetTextContent(string(p))
+	logs.AppendChild(new)
+
+	return 0, nil
+}
+\end{lstlisting} 
+
+On the other hand, since we were running the webassembly instance directly from a script imported in the HTML page, the same thread that composes the webpage is the one that executes the program and therefore, since this is a computationally intensive tasks, the browser displayed the message from figure \ref{image:kill-task} on top of the webpage. Moreover, if the user changed to another tab, the execution was paused.
+
+\begin{figure}[h!]
+		\centering
+    	\includegraphics[width=\linewidth]{assets/images/browser-warning.png}
+    	\caption{Browser warning about computationally intensive tasks}
+    	\label{image:kill-task}
+\end{figure} 
+
+We solved this by using a webworker \cite{webworker}; a script that runs in a separate thread in the background. The problem with webworkers is that they do not have access to the DOM, instead, they have to communicate with another thread that is being executed in the browser's main thread. It is a simple but limited API where the main thread launches the worker and sets an event listener for incoming messages. Then the worker posts a new message as a string that is delivered to the main thread. Figure \ref{logging-system} illustrates the webworker behaviour we used for the logging system.
+
+\begin{figure}[h!]
+		\centering
+    	\includegraphics[width=\linewidth]{assets/images/logging-system.png}
+    	\caption{The \textit{main.js} script loaded in the main HTML document, starts a webworker that will start the webassembly runtime and load the compiled Go program into it. The logs generated in Go are received by the main thread through the webworker API and these are appended into the web DOM}
+    	\label{image:logging-system}
+\end{figure} 
+
+Since now we had a background job doing the most demanding work, the main thread was free to compose the webpage so we added two line charts using \textit{chart JS} to display live information about the execution. In order to parse the information needed to compose the charts from the logs, we changed their format to JSON in order to deserialize them to Java Script objects and access their information faster and easier.
+
+This concludes the first milestone in the project. The deliverable prototype is resulting web interface for the genetic algortihm that trains the multi layer perceptron in WebAssembly. It can be found at \href{https://salvacorts.github.io/TFG-Parasitic-Metaheuristics/mlp-ea/web/src/}{salvacorts.github.io/TFG-Parasitic-Metaheuristics/mlp-ea/web/src/} and looks as follows.
+
+\begin{figure}[h!]
+		\centering
+    	\includegraphics[width=\linewidth]{assets/images/web-milestone1.png}
+    	\caption{Final prototype of the webpage running the Go code for the genetic algorithm in webassembly.}
+    	\label{image:web-milestone1}
+\end{figure}
+
+The genetic algorithm implementation can be found in the main repository in directory \textit{mlp-ea/common}. The web source can be found in \textit{mlp-ea/web}. The source of the program to execute it natively can be found in \textit{mlp-ea/native} and can be directly run as in Listing \ref{lst:run} or compiled and run as in \ref{lst:build-run}.
+
+\begin{lstlisting}[
+caption={Run native program},
+label={lst:run},
+captionpos=b]
+go run main.go
+\end{lstlisting} 
+
+\begin{lstlisting}[
+caption={Build program and run},
+label={lst:build-run},
+captionpos=b]
+go build main.go
+./main
+\end{lstlisting} 
