--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -571,3 +571,12 @@ title = {PROBEN1 — A set of benchmarks and benchmarking rules for neural netwo
 	title        = {eaopt},
 	howpublished = {\url{https://en.wikipedia.org/wiki/Backpropagation}}
 }
+
+@inproceedings{paper-pool-jj,
+author = {Merelo Guervós, Juan and Mora, Antonio and Albert Cruz, J and Esparcia-Alcázar, Anna},
+year = {2012},
+month = {04},
+pages = {446-455},
+title = {Pool-Based Distributed Evolutionary Algorithms Using an Object Database},
+doi = {10.1007/978-3-642-29178-4_45}
+}
