--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -568,7 +568,7 @@ title = {PROBEN1 — A set of benchmarks and benchmarking rules for neural netwo
 }
 
 @misc{backpropagation,
-	title        = {eaopt},
+	title        = {Backpropagation},
 	howpublished = {\url{https://en.wikipedia.org/wiki/Backpropagation}}
 }
 
@@ -579,4 +579,11 @@ month = {04},
 pages = {446-455},
 title = {Pool-Based Distributed Evolutionary Algorithms Using an Object Database},
 doi = {10.1007/978-3-642-29178-4_45}
+}
+
+
+
+@misc{rest-vs-grpc-bench,
+	title        = {gRPC+Protobuf or JSON+HTTP?},
+	howpublished = {\url{https://github.com/plutov/benchmark-grpc-protobuf-vs-http-json}}
 }
