--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -581,9 +581,12 @@ title = {Pool-Based Distributed Evolutionary Algorithms Using an Object Database
 doi = {10.1007/978-3-642-29178-4_45}
 }
 
-
-
 @misc{rest-vs-grpc-bench,
 	title        = {gRPC+Protobuf or JSON+HTTP?},
 	howpublished = {\url{https://github.com/plutov/benchmark-grpc-protobuf-vs-http-json}}
+}
+
+@misc{grpc-wasm-issue,
+	title        = {[Feature request] Add wasm support},
+	howpublished = {\url{https://github.com/grpc/grpc-go/issues/2294}}
 }
